--- a/App.config
+++ b/App.config
@@ -1,32 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
-  </configSections>
-  <log4net>
-    <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="log/log"/>
-      <param name="AppendToFile" value="true"/>
-      <param name="DatePattern" value="_yyyyMMddHH&quot;.log&quot;"/>
-      <param name="RollingStyle" value="Date"/>
-      <param name="StaticLogFileName" value="false"/>
-      <layout type="log4net.Layout.SerializedLayout, log4net.Json">
-        <default value="nxlog" />
-        <member value="ProcessId" />
-      </layout>
-    </appender>
-    <appender name="UdpAppender" type="log4net.Appender.UdpAppender">
-      <remoteAddress value="localhost" />
-      <remotePort value="55555" />
-      <layout type="log4net.Layout.SerializedLayout, log4net.Json">
-        <default value="nxlog" />
-        <member value="ProcessId" />
-      </layout>
-    </appender>
-    <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="FileAppender"/>
-      <appender-ref ref="UdpAppender"/>
-    </root>
-  </log4net>
+  <appSettings>
+    <add key="log4net.Config" value="log4net.config"/>
+    <add key="log4net.Config.Watch" value="True"/>
+  </appSettings>
 </configuration>
