--- a/log4net.Json.Test.UI.1.2.13.vs2010.net.3.5.csproj
+++ b/log4net.Json.Test.UI.1.2.13.vs2010.net.3.5.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>log4net.Json.Test.UI</RootNamespace>
     <AssemblyName>log4net.Json.Test.UI</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -36,14 +36,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\..\..\libs\log4net-bin\net\3.5\release\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Repos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Repos.Designer.cs">
+      <DependentUpon>Repos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Appender\TestAppender.cs" />
     <Compile Include="TestUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Repos.resx">
+      <DependentUpon>Repos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,9 +72,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TestUI.resx">
+      <DependentUpon>TestUI.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <EmbeddedResource Include="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -76,9 +92,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\log4net.Json\log4net.Json.1.2.13.vs2010.net.3.5.csproj">
-      <Project>{857AF522-E42D-4F9E-9916-140526D7DE4B}</Project>
-      <Name>log4net.Json.1.2.13.vs2010.net.3.5</Name>
+    <ProjectReference Include="..\..\..\src\log4net\log4net.vs2010.csproj">
+      <Project>{181FE707-E161-4722-9F38-6AAAB6FAA106}</Project>
+      <Name>log4net.vs2010</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\log4net.Ext.Json\log4net.Ext.Json.1.3.trunk.vs2010.net.4.0.csproj">
+      <Project>{06A52FA9-985D-455A-A7EE-EF6179B26919}</Project>
+      <Name>log4net.Ext.Json.1.3.trunk.vs2010.net.4.0</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
