--- a/log4net.config
+++ b/log4net.config
@@ -4,18 +4,21 @@
     </loggerFactory>
     <root>
       <level value="DEBUG"/>
-    </root>
-    <logger name="log4net">
       <appender-ref ref="StructuredTestAppender"/>
+    </root>
+    <logger name="BenchMark">     
+    </logger>
+    <logger name="BenchMark.Flat">
       <appender-ref ref="FlatTestAppender"/>
+    </logger>
+    <logger name="log4net">
     </logger>
     <logger name="log4net.Appender.KeepAliveAppender">
       <appender-ref ref="KeepAliveAppender"/>
     </logger>
     <appender name="KeepAliveAppender" type="log4net.Appender.KeepAliveAppender, log4net.Ext.Json" additivity="false">
-      <keepaliveinterval value="5000" />
+      <keepaliveinterval value="50000" />
       <appender-ref ref="StructuredTestAppender"/>
-      <appender-ref ref="FlatTestAppender"/>
     </appender>
     <appender name="StructuredTestAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
       <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
