--- a/log4net.config
+++ b/log4net.config
@@ -1,26 +1,68 @@
 ﻿<configuration>
-  <log4net update="Merge">
+  <log4net update="Overwrite">
     <loggerFactory type="log4net.Util.Stamps.StampingLoggerFactory, log4net.Ext.Json">
     </loggerFactory>
+    
     <root>
       <level value="DEBUG"/>
-      <appender-ref ref="StructuredTestAppender"/>
+      <appender-ref ref="JsonLoopAppender"/>
     </root>
-    <logger name="BenchMark">     
+    
+    <logger name="BenchMark">
     </logger>
-    <logger name="BenchMark.Flat">
-      <appender-ref ref="FlatTestAppender"/>
+
+    <logger name="BenchMark.JSON.Loop.Plus.Plus" additivity="false">
+      <appender-ref ref="JsonPlusPlusLoopAppender"/>
     </logger>
+    <logger name="BenchMark.JSON.Loop.Plus" additivity="false">
+      <appender-ref ref="JsonPlusLoopAppender"/>
+    </logger>
+    <logger name="BenchMark.JSON.Loop" additivity="false">
+      <appender-ref ref="JsonLoopAppender"/>
+    </logger>
+    <logger name="BenchMark.Normal.Loop" additivity="false">
+      <appender-ref ref="NormalLoopAppender"/>
+    </logger>
+
+    <logger name="BenchMark.JSON.File" additivity="false">
+      <appender-ref ref="JsonFileAppender"/>
+    </logger>
+    <logger name="BenchMark.Normal.File" additivity="false">
+      <appender-ref ref="NormalFileAppender"/>
+    </logger>
+    
+    <logger name="BenchMark.JSON.UDP" additivity="false">
+      <appender-ref ref="JsonUdpAppender"/>
+    </logger>
+    <logger name="BenchMark.Normal.UDP" additivity="false">
+      <appender-ref ref="NormalUdpAppender"/>
+    </logger>
+    
+    
     <logger name="log4net">
     </logger>
-    <logger name="log4net.Appender.KeepAliveAppender">
+    <logger name="log4net.Appender.KeepAliveAppender" additivity="false">
       <appender-ref ref="KeepAliveAppender"/>
-    </logger>
+    </logger>    
     <appender name="KeepAliveAppender" type="log4net.Appender.KeepAliveAppender, log4net.Ext.Json" additivity="false">
-      <keepaliveinterval value="50000" />
-      <appender-ref ref="StructuredTestAppender"/>
+      <keepaliveinterval value="60000" />
+      <appender-ref ref="JsonLoopAppender"/>
     </appender>
-    <appender name="StructuredTestAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
+
+
+    <appender name="JsonPlusPlusLoopAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
+      <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
+        <serializingConverter type="log4net.Layout.Pattern.JsonPatternConverter, log4net.Ext.Json">
+          <fetcher type="log4net.Layout.RawArrangedLayout, log4net.Ext.Json">
+          </fetcher>
+          <renderer type="log4net.ObjectRenderer.JsonObjectRenderer, log4net.Ext.Json">
+            <factory type="log4net.Util.Serializer.JsonSerializer+Factory">              
+            </factory>
+          </renderer>
+        </serializingConverter>
+      </layout>
+    </appender>
+    <appender name="JsonPlusLoopAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
       <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
         <serializingConverter type="log4net.Layout.Pattern.JsonPatternConverter, log4net.Ext.Json">
           <fetcher type="log4net.Layout.RawArrangedLayout, log4net.Ext.Json">
@@ -28,10 +70,40 @@
         </serializingConverter>
       </layout>
     </appender>
-    <appender name="FlatTestAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
+    <appender name="JsonLoopAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
       <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
       </layout>
-      <threshold>DEBUG</threshold>
+    </appender>
+    <appender name="NormalLoopAppender" type="log4net.Json.Test.UI.Appender.TestAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{o} [%thread] %level %logger %message%newline%property%newline" />
+      </layout>
+    </appender>
+    <appender name="JsonFileAppender" type="log4net.Appender.FileAppender">
+      <file value="log-file.json" />
+      <appendToFile value="false" />
+      <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
+      </layout>
+    </appender>
+    <appender name="NormalFileAppender" type="log4net.Appender.FileAppender">
+      <file value="log-file.txt" />
+      <appendToFile value="false" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{o} [%thread] %level %logger %message%newline%property%newline" />
+      </layout>
+    </appender>
+    <appender name="JsonUdpAppender" type="log4net.Appender.UdpAppender">
+      <remoteaddress value="127.0.0.1" />
+      <remoteport value="55555" />
+      <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
+      </layout>
+    </appender>
+    <appender name="NormalUdpAppender" type="log4net.Appender.UdpAppender">
+      <remoteaddress value="127.0.0.1" />
+      <remoteport value="55555" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{o} [%thread] %level %logger %message%newline%property%newline" />
+      </layout>
     </appender>
   </log4net>
 </configuration>
