--- a/log4net.Json.Test.UI.1.2.13.vs2010.net.3.5.csproj
+++ b/log4net.Json.Test.UI.1.2.13.vs2010.net.3.5.csproj
@@ -125,9 +125,9 @@
       <Project>{181FE707-E161-4722-9F38-6AAAB6FAA106}</Project>
       <Name>log4net.vs2010</Name>
     </ProjectReference>
-    <ProjectReference Include="..\log4net.Ext.Json\log4net.Ext.Json.1.3.trunk.vs2010.net.4.0.csproj">
-      <Project>{06A52FA9-985D-455A-A7EE-EF6179B26919}</Project>
-      <Name>log4net.Ext.Json.1.3.trunk.vs2010.net.4.0</Name>
+    <ProjectReference Include="..\log4net.Ext.Json\log4net.Ext.Json.1.2.13.vs2010.net.3.5.csproj">
+      <Project>{900A8C20-01BE-427A-B7C7-B8C54AF10553}</Project>
+      <Name>log4net.Ext.Json.1.2.13.vs2010.net.3.5</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
