log4net.Ext.Json
- Removed Factory approach to serializer in JsonObjectRenderer
- Improved tests UI efficiency and usability

--- a/log4net.config
+++ b/log4net.config
@@ -34,6 +34,9 @@
     <logger name="BenchMark.JSON.UDP" additivity="false">
       <appender-ref ref="JsonUdpAppender"/>
     </logger>
+    <logger name="BenchMark.JSON.Builtin.UDP" additivity="false">
+      <appender-ref ref="JsonBuiltinUdpAppender"/>
+    </logger>
     <logger name="BenchMark.Normal.UDP" additivity="false">
       <appender-ref ref="NormalUdpAppender"/>
     </logger>
@@ -56,8 +59,8 @@
           <fetcher type="log4net.Layout.RawArrangedLayout, log4net.Ext.Json">
           </fetcher>
           <renderer type="log4net.ObjectRenderer.JsonObjectRenderer, log4net.Ext.Json">
-            <factory type="log4net.Util.Serializer.JsonSerializer+Factory">              
-            </factory>
+            <serializer type="log4net.Util.Serializer.JsonBuiltinSerializer">              
+            </serializer>
           </renderer>
         </serializingConverter>
       </layout>
@@ -94,13 +97,23 @@
     </appender>
     <appender name="JsonUdpAppender" type="log4net.Appender.UdpAppender">
       <remoteaddress value="127.0.0.1" />
-      <remoteport value="55555" />
+      <remoteport value="666" />
       <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
+      </layout>
+    </appender>
+    <appender name="JsonBuiltinUdpAppender" type="log4net.Appender.UdpAppender">
+      <remoteaddress value="127.0.0.1" />
+      <remoteport value="666" />
+      <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
+        <renderer type="log4net.ObjectRenderer.JsonObjectRenderer, log4net.Ext.Json">
+          <serializer type="log4net.Util.Serializer.JsonBuiltinSerializer">
+          </serializer>
+        </renderer>
       </layout>
     </appender>
     <appender name="NormalUdpAppender" type="log4net.Appender.UdpAppender">
       <remoteaddress value="127.0.0.1" />
-      <remoteport value="55555" />
+      <remoteport value="666" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date{o} [%thread] %level %logger %message%newline%property%newline" />
       </layout>
